--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
      <key>kind</key>
      <string>software-package</string>
      <key>url</key>
-     <string>https://qpb.github.io/Djxc/Djxc.ipa</string>
+     <string>https://github.com/qpb/app/raw/master/Djxc.ipa</string>
     </dict>
     <dict>
       <key>kind</key>
@@ -31,7 +31,7 @@
     <key>bundle-identifier</key>
     <string>com.wdx.ShowCai</string>
     <key>bundle-version</key>
-    <string>5.0.2</string>
+    <string>5.0.3</string>
     <key>kind</key>
     <string>software</string>
     <key>title</key>
